force-app/main/default/objects/Submission__c/Submission__c.object-meta.xml
<CustomObject>
    <label>Submission</label>
    <nameField>
        <label>Submison Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Submission</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>