force-app/main/default/objects/Submission__c/fields/Assessment_Passed__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Passed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assessment Passed</label>
    <type>Checkbox</type>
</CustomField>