force-app/main/default/objects/Submission__c/fields/Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrollment</label>
    <referenceTo>Enrollment__c</referenceTo>
    <relationshipLabel>Submission</relationshipLabel>
    <relationshipName>Submission</relationshipName>
    <type>Lookup</type>
</CustomField>