force-app/main/default/objects/Submission__c/fields/Student_Answers__c.field-meta.xml
<CustomField>
    <fullName>Student_Answers__c</fullName>
    <label>Student Answers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>